# ssih-music

./: Doxyfile  LICENSE  LICENSE-APACHE  LICENSE-LGPL  NOTICE.txt  README.md  keywords.txt  library.properties
docs/: Tutorial.en.md  Tutorial.ja.md  Tutorial.md
examples/: README.md
examples/ButtonDrum/: Button.h  ButtonDrum.ino  README.md
examples/CorrectHorn/: CorrectHorn.ino  README.md
examples/MusicBox/: MusicBox.ino  README.md
examples/OneKeySynth/: OneKeySynth.ino  README.md
examples/SimpleHorn/: README.md  SimpleHorn.ino
examples/YuruFlaCastanet/: GyroSensor.h  GyroSensor_BMI160.cpp  GyroSensor_BMI270.cpp  README.md  YuruFlaCastanet.ino  config.h
examples/YuruFlaShoe/: README.md  YuruFlaShoe.ino
examples/YuruHorn/: README.md  YuruHorn.ino
examples/YuruHorn_SubCore1/: RingBuff.h  YuruHorn_SubCore1.ino
src/: BaseFilter.cpp  BufferedFileReader.cpp  BufferedFileReader.h  ChannelFilter.cpp  ChannelFilter.h  CorrectToneFilter.cpp  CorrectToneFilter.h  NullFilter.cpp  OctaveShift.cpp  OctaveShift.h  OneKeySynthesizerFilter.cpp  OneKeySynthesizerFilter.h  ParserFactory.cpp  ParserFactory.h  PcmRenderer.cpp  PcmRenderer.h  PlaylistParser.cpp  PlaylistParser.h  SDSeekSink.cpp  SDSeekSink.h  SDSink.cpp  SDSink.h  SFZParser.cpp  SFZParser.h  SFZSink.cpp  SFZSink.h  ScoreFilter.cpp  ScoreFilter.h  ScoreParser.cpp  ScoreParser.h  ScoreReader.cpp  ScoreReader.h  ScoreSrc.cpp  ScoreSrc.h  SmfParser.cpp  SmfParser.h  TarReader.cpp  TarReader.h  TextScoreParser.cpp  TextScoreParser.h  (+21 more)
test/: CMakeLists.txt  Makefile  channelfilter_test.cpp  correcttonefilter_test.cpp  octaveshift_test.cpp  onekeysynthesizerfilter_test.cpp  parserfactory_test.cpp  playlistparser_test.cpp  scorefilter_test.cpp  scoresrc_test.cpp  sdseeksink_test.cpp  sdsink_test.cpp  sfzparser_test.cpp  sfzsink_notename_test.cpp  sfzsink_test.cpp  smfparser_test.cpp  textscoreparser_test.cpp  timekeeper_test.cpp  wave_test.cpp  yuruhornsrc_test.cpp
test/stub/: Arduino.h  Audio.h  File.h  FrontEnd.h  HardwareSerial.h  MP.h  MemoryUtil.h  OutputMixer.h  Print.h  SDHCI.h  Storage.h  Stream.h  WString.h  stub.cpp
test/stub/arch/board/: cxd56_audio.h
test/stub/cmsis/: arm_math.h
tools/: README.md  import-sfz.py
tools/sfzparser/: __init__.py  __main__.py  core.py
